src/main/java/codeGen/SpassParser.java
package codeGen;// Generated from C:/projects/SpassAndProver9/src/grammar\SpassParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SpassParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Special_symbol=1, And=2, Author=3, Axioms=4, Begin_problem=5, Clause=6,
		CloseB=7, CloseBc=8, CloseP=9, ClR=10, Cnf=11, Colon=12, Comma=13, Con=14,
		Conjectures=15, Date=16, Description=17, Dnf=18, Dot=19, EmS=20, End_of_list=21,
		End_problem=22, EqF=23, EqR=24, Equal=25, Equiv=26, Exists=27, Fac=28,
		False_=29, Forall=30, Formula=31, Freely=32, Functions=33, Generated_by=34,
		GeR=35, Hypothesis=36, Implied=37, Implies=38, Inp=39, KIV=40, LEM=41,
		List_of_clauses=42, List_of_declarations=43, List_of_descriptions=44,
		List_of_formulae=45, List_of_general_settings=46, List_of_proof=47, List_of_settings=48,
		List_of_symbols=49, Logic=50, MOne=51, MPm=52, Name=53, Not=54, Obv=55,
		OHy=56, OpenB=57, OpenBc=58, OpenP=59, OPm=60, Or=61, OTTER=62, Predicate=63,
		Predicates=64, PROTEIN=65, Rew=66, RRE=67, Satisfiable=68, SATURATE=69,
		SETHEO=70, SHy=71, SoR=72, Sort=73, Sorts=74, SPASS=75, SpL=76, Splitlevel=77,
		SPm=78, SpR=79, Spt=80, SSi=81, Status=82, Step=83, Subsort=84, Ter=85,
		ThreeTAP=86, True_=87, UnC=88, Unknown=89, Unsatisfiable=90, URR=91, Version=92,
		WS=93, Open=94, Identifier=95, Letter=96, Digit=97, Close=98, JustText=99;
	public static final int
		RULE_problem = 0, RULE_description = 1, RULE_log_state = 2, RULE_logical_part = 3,
		RULE_symbol_list = 4, RULE_declaration_list = 5, RULE_declaration = 6,
		RULE_gen_decl = 7, RULE_func_list = 8, RULE_subsort_decl = 9, RULE_term_decl = 10,
		RULE_pred_decl = 11, RULE_sort_sym = 12, RULE_pred_sym = 13, RULE_fun_sym = 14,
		RULE_formula_list = 15, RULE_origin_type = 16, RULE_label = 17, RULE_term = 18,
		RULE_term_list = 19, RULE_quant_sym = 20, RULE_symbol = 21, RULE_clause_list = 22,
		RULE_clause_type = 23, RULE_cnf_clause = 24, RULE_dnf_clause = 25, RULE_cnf_clause_body = 26,
		RULE_dnf_clause_body = 27, RULE_proof_list = 28, RULE_reference = 29,
		RULE_result = 30, RULE_rule_appl = 31, RULE_parent_list = 32, RULE_parent_ = 33,
		RULE_assoc_list = 34, RULE_key = 35, RULE_value = 36, RULE_proof_type = 37,
		RULE_user_reference = 38, RULE_user_result = 39, RULE_user_rule_appl = 40,
		RULE_user_parent = 41, RULE_user_proof_type = 42, RULE_user_key = 43,
		RULE_user_value = 44, RULE_settings = 45, RULE_setting_entry = 46, RULE_setting_label = 47,
		RULE_identifier = 48, RULE_arity = 49, RULE_number = 50, RULE_text_ = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"problem", "description", "log_state", "logical_part", "symbol_list",
			"declaration_list", "declaration", "gen_decl", "func_list", "subsort_decl",
			"term_decl", "pred_decl", "sort_sym", "pred_sym", "fun_sym", "formula_list",
			"origin_type", "label", "term", "term_list", "quant_sym", "symbol", "clause_list",
			"clause_type", "cnf_clause", "dnf_clause", "cnf_clause_body", "dnf_clause_body",
			"proof_list", "reference", "result", "rule_appl", "parent_list", "parent_",
			"assoc_list", "key", "value", "proof_type", "user_reference", "user_result",
			"user_rule_appl", "user_parent", "user_proof_type", "user_key", "user_value",
			"settings", "setting_entry", "setting_label", "identifier", "arity",
			"number", "text_"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'-'", "'and'", "'author'", "'axioms'", "'begin_problem'", "'clause'",
			"']'", "'}'", "')'", "'ClR'", "'cnf'", "':'", "','", "'Con'", "'conjectures'",
			"'date'", "'description'", "'dnf'", "'.'", "'EmS'", "'end_of_list'",
			"'end_problem'", "'EqF'", "'EqR'", "'equal'", "'equiv'", "'exists'",
			"'Fac'", "'false'", "'forall'", "'formula'", "'freely'", "'functions'",
			"'generated_by'", "'GeR'", "'hypothesis'", "'implied'", "'implies'",
			"'Inp'", "'KIV'", "'LEM'", "'list_of_clauses'", "'list_of_declarations'",
			"'list_of_descriptions'", "'list_of_formulae'", "'list_of_general_settings'",
			"'list_of_proof'", "'list_of_settings'", "'list_of_symbols'", "'logic'",
			"'-1'", "'MPm'", "'name'", "'not'", "'Obv'", "'OHy'", "'['", "'{'", "'('",
			"'OPm'", "'or'", "'OTTER'", "'predicate'", "'predicates'", "'PROTEIN'",
			"'Rew'", "'RRE'", "'satisfiable'", "'SATURATE'", "'SETHEO'", "'SHy'",
			"'SoR'", "'sort'", "'sorts'", "'SPASS'", "'SpL'", "'splitlevel'", "'SPm'",
			"'SpR'", "'Spt'", "'SSi'", "'status'", "'step'", "'subsort'", "'Ter'",
			"'3TAP'", "'true'", "'UnC'", "'unknown'", "'unsatisfiable'", "'URR'",
			"'version'", null, "'{*'", null, null, null, "'*}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Special_symbol", "And", "Author", "Axioms", "Begin_problem", "Clause",
			"CloseB", "CloseBc", "CloseP", "ClR", "Cnf", "Colon", "Comma", "Con",
			"Conjectures", "Date", "Description", "Dnf", "Dot", "EmS", "End_of_list",
			"End_problem", "EqF", "EqR", "Equal", "Equiv", "Exists", "Fac", "False_",
			"Forall", "Formula", "Freely", "Functions", "Generated_by", "GeR", "Hypothesis",
			"Implied", "Implies", "Inp", "KIV", "LEM", "List_of_clauses", "List_of_declarations",
			"List_of_descriptions", "List_of_formulae", "List_of_general_settings",
			"List_of_proof", "List_of_settings", "List_of_symbols", "Logic", "MOne",
			"MPm", "Name", "Not", "Obv", "OHy", "OpenB", "OpenBc", "OpenP", "OPm",
			"Or", "OTTER", "Predicate", "Predicates", "PROTEIN", "Rew", "RRE", "Satisfiable",
			"SATURATE", "SETHEO", "SHy", "SoR", "Sort", "Sorts", "SPASS", "SpL",
			"Splitlevel", "SPm", "SpR", "Spt", "SSi", "Status", "Step", "Subsort",
			"Ter", "ThreeTAP", "True_", "UnC", "Unknown", "Unsatisfiable", "URR",
			"Version", "WS", "Open", "Identifier", "Letter", "Digit", "Close", "JustText"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SpassParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SpassParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProblemContext extends ParserRuleContext {
		public TerminalNode Begin_problem() { return getToken(SpassParser.Begin_problem, 0); }
		public TerminalNode OpenP() { return getToken(SpassParser.OpenP, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode CloseP() { return getToken(SpassParser.CloseP, 0); }
		public List<TerminalNode> Dot() { return getTokens(SpassParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(SpassParser.Dot, i);
		}
		public DescriptionContext description() {
			return getRuleContext(DescriptionContext.class,0);
		}
		public Logical_partContext logical_part() {
			return getRuleContext(Logical_partContext.class,0);
		}
		public TerminalNode End_problem() { return getToken(SpassParser.End_problem, 0); }
		public TerminalNode EOF() { return getToken(SpassParser.EOF, 0); }
		public List<SettingsContext> settings() {
			return getRuleContexts(SettingsContext.class);
		}
		public SettingsContext settings(int i) {
			return getRuleContext(SettingsContext.class,i);
		}
		public ProblemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_problem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).enterProblem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).exitProblem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpassParserVisitor ) return ((SpassParserVisitor<? extends T>)visitor).visitProblem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProblemContext problem() throws RecognitionException {
		ProblemContext _localctx = new ProblemContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_problem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(Begin_problem);
			setState(105);
			match(OpenP);
			setState(106);
			identifier();
			setState(107);
			match(CloseP);
			setState(108);
			match(Dot);
			setState(109);
			description();
			setState(110);
			logical_part();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==List_of_general_settings || _la==List_of_settings) {
				{
				{
				setState(111);
				settings();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(End_problem);
			setState(118);
			match(Dot);
			setState(119);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescriptionContext extends ParserRuleContext {
		public TerminalNode List_of_descriptions() { return getToken(SpassParser.List_of_descriptions, 0); }
		public List<TerminalNode> Dot() { return getTokens(SpassParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(SpassParser.Dot, i);
		}
		public TerminalNode Name() { return getToken(SpassParser.Name, 0); }
		public List<TerminalNode> OpenP() { return getTokens(SpassParser.OpenP); }
		public TerminalNode OpenP(int i) {
			return getToken(SpassParser.OpenP, i);
		}
		public List<TerminalNode> CloseP() { return getTokens(SpassParser.CloseP); }
		public TerminalNode CloseP(int i) {
			return getToken(SpassParser.CloseP, i);
		}
		public TerminalNode Author() { return getToken(SpassParser.Author, 0); }
		public TerminalNode Status() { return getToken(SpassParser.Status, 0); }
		public Log_stateContext log_state() {
			return getRuleContext(Log_stateContext.class,0);
		}
		public TerminalNode Description() { return getToken(SpassParser.Description, 0); }
		public TerminalNode End_of_list() { return getToken(SpassParser.End_of_list, 0); }
		public List<TerminalNode> Open() { return getTokens(SpassParser.Open); }
		public TerminalNode Open(int i) {
			return getToken(SpassParser.Open, i);
		}
		public List<Text_Context> text_() {
			return getRuleContexts(Text_Context.class);
		}
		public Text_Context text_(int i) {
			return getRuleContext(Text_Context.class,i);
		}
		public List<TerminalNode> Close() { return getTokens(SpassParser.Close); }
		public TerminalNode Close(int i) {
			return getToken(SpassParser.Close, i);
		}
		public TerminalNode Version() { return getToken(SpassParser.Version, 0); }
		public TerminalNode Logic() { return getToken(SpassParser.Logic, 0); }
		public TerminalNode Date() { return getToken(SpassParser.Date, 0); }
		public DescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).enterDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).exitDescription(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpassParserVisitor ) return ((SpassParserVisitor<? extends T>)visitor).visitDescription(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DescriptionContext description() throws RecognitionException {
		DescriptionContext _localctx = new DescriptionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_description);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(List_of_descriptions);
			setState(122);
			match(Dot);
			setState(123);
			match(Name);
			setState(124);
			match(OpenP);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Open) {
				{
				setState(125);
				match(Open);
				setState(126);
				text_();
				setState(127);
				match(Close);
				}
			}

			setState(131);
			match(CloseP);
			setState(132);
			match(Dot);
			setState(133);
			match(Author);
			setState(134);
			match(OpenP);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Open) {
				{
				setState(135);
				match(Open);
				setState(136);
				text_();
				setState(137);
				match(Close);
				}
			}

			setState(141);
			match(CloseP);
			setState(142);
			match(Dot);
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Version) {
				{
				setState(143);
				match(Version);
				setState(144);
				match(OpenP);
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Open) {
					{
					setState(145);
					match(Open);
					setState(146);
					text_();
					setState(147);
					match(Close);
					}
				}

				setState(151);
				match(CloseP);
				setState(152);
				match(Dot);
				}
			}

			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Logic) {
				{
				setState(155);
				match(Logic);
				setState(156);
				match(OpenP);
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Open) {
					{
					setState(157);
					match(Open);
					setState(158);
					text_();
					setState(159);
					match(Close);
					}
				}

				setState(163);
				match(CloseP);
				setState(164);
				match(Dot);
				}
			}

			setState(167);
			match(Status);
			setState(168);
			match(OpenP);
			setState(169);
			log_state();
			setState(170);
			match(CloseP);
			setState(171);
			match(Dot);
			setState(172);
			match(Description);
			setState(173);
			match(OpenP);
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Open) {
				{
				setState(174);
				match(Open);
				setState(175);
				text_();
				setState(176);
				match(Close);
				}
			}

			setState(180);
			match(CloseP);
			setState(181);
			match(Dot);
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Date) {
				{
				setState(182);
				match(Date);
				setState(183);
				match(OpenP);
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Open) {
					{
					setState(184);
					match(Open);
					setState(185);
					text_();
					setState(186);
					match(Close);
					}
				}

				setState(190);
				match(CloseP);
				setState(191);
				match(Dot);
				}
			}

			setState(194);
			match(End_of_list);
			setState(195);
			match(Dot);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Log_stateContext extends ParserRuleContext {
		public TerminalNode Satisfiable() { return getToken(SpassParser.Satisfiable, 0); }
		public TerminalNode Unsatisfiable() { return getToken(SpassParser.Unsatisfiable, 0); }
		public TerminalNode Unknown() { return getToken(SpassParser.Unknown, 0); }
		public Log_stateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_log_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).enterLog_state(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).exitLog_state(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpassParserVisitor ) return ((SpassParserVisitor<? extends T>)visitor).visitLog_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Log_stateContext log_state() throws RecognitionException {
		Log_stateContext _localctx = new Log_stateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_log_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_la = _input.LA(1);
			if ( !(((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & ((1L << (Satisfiable - 68)) | (1L << (Unknown - 68)) | (1L << (Unsatisfiable - 68)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logical_partContext extends ParserRuleContext {
		public Symbol_listContext symbol_list() {
			return getRuleContext(Symbol_listContext.class,0);
		}
		public Declaration_listContext declaration_list() {
			return getRuleContext(Declaration_listContext.class,0);
		}
		public List<Formula_listContext> formula_list() {
			return getRuleContexts(Formula_listContext.class);
		}
		public Formula_listContext formula_list(int i) {
			return getRuleContext(Formula_listContext.class,i);
		}
		public List<Clause_listContext> clause_list() {
			return getRuleContexts(Clause_listContext.class);
		}
		public Clause_listContext clause_list(int i) {
			return getRuleContext(Clause_listContext.class,i);
		}
		public List<Proof_listContext> proof_list() {
			return getRuleContexts(Proof_listContext.class);
		}
		public Proof_listContext proof_list(int i) {
			return getRuleContext(Proof_listContext.class,i);
		}
		public Logical_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logical_part; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).enterLogical_part(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).exitLogical_part(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpassParserVisitor ) return ((SpassParserVisitor<? extends T>)visitor).visitLogical_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logical_partContext logical_part() throws RecognitionException {
		Logical_partContext _localctx = new Logical_partContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_logical_part);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==List_of_symbols) {
				{
				setState(199);
				symbol_list();
				}
			}

			setState(203);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==List_of_declarations) {
				{
				setState(202);
				declaration_list();
				}
			}

			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==List_of_formulae) {
				{
				{
				setState(205);
				formula_list();
				}
				}
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==List_of_clauses) {
				{
				{
				setState(211);
				clause_list();
				}
				}
				setState(216);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(220);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==List_of_proof) {
				{
				{
				setState(217);
				proof_list();
				}
				}
				setState(222);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Symbol_listContext extends ParserRuleContext {
		public TerminalNode List_of_symbols() { return getToken(SpassParser.List_of_symbols, 0); }
		public List<TerminalNode> Dot() { return getTokens(SpassParser.Dot); }
		public TerminalNode Dot(int i) {
			return getToken(SpassParser.Dot, i);
		}
		public TerminalNode End_of_list() { return getToken(SpassParser.End_of_list, 0); }
		public TerminalNode Functions() { return getToken(SpassParser.Functions, 0); }
		public List<TerminalNode> OpenB() { return getTokens(SpassParser.OpenB); }
		public TerminalNode OpenB(int i) {
			return getToken(SpassParser.OpenB, i);
		}
		public List<TerminalNode> CloseB() { return getTokens(SpassParser.CloseB); }
		public TerminalNode CloseB(int i) {
			return getToken(SpassParser.CloseB, i);
		}
		public TerminalNode Predicates() { return getToken(SpassParser.Predicates, 0); }
		public TerminalNode Sorts() { return getToken(SpassParser.Sorts, 0); }
		public List<Sort_symContext> sort_sym() {
			return getRuleContexts(Sort_symContext.class);
		}
		public Sort_symContext sort_sym(int i) {
			return getRuleContext(Sort_symContext.class,i);
		}
		public List<Fun_symContext> fun_sym() {
			return getRuleContexts(Fun_symContext.class);
		}
		public Fun_symContext fun_sym(int i) {
			return getRuleContext(Fun_symContext.class,i);
		}
		public List<TerminalNode> OpenP() { return getTokens(SpassParser.OpenP); }
		public TerminalNode OpenP(int i) {
			return getToken(SpassParser.OpenP, i);
		}
		public List<TerminalNode> Comma() { return getTokens(SpassParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(SpassParser.Comma, i);
		}
		public List<ArityContext> arity() {
			return getRuleContexts(ArityContext.class);
		}
		public ArityContext arity(int i) {
			return getRuleContext(ArityContext.class,i);
		}
		public List<TerminalNode> CloseP() { return getTokens(SpassParser.CloseP); }
		public TerminalNode CloseP(int i) {
			return getToken(SpassParser.CloseP, i);
		}
		public List<Pred_symContext> pred_sym() {
			return getRuleContexts(Pred_symContext.class);
		}
		public Pred_symContext pred_sym(int i) {
			return getRuleContext(Pred_symContext.class,i);
		}
		public Symbol_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbol_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).enterSymbol_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpassParserListener ) ((SpassParserListener)listener).exitSymbol_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpassParserVisitor ) return ((SpassParserVisitor<? extends T>)visitor).visitSymbol_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Symbol_listContext symbol_list() throws RecognitionException {
		Symbol_listContext _localctx = new Symbol_listContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_symbol_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(223);
			match(List_of_symbols);
			setState(224);
			match(Dot);
			setState(254);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Functions) {
				{
				setState(225);
				match(Functions);
				setState(226);
				match(OpenB);
				setState(234);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(227);
					fun_sym();
					}
					break;
				case OpenP:
					{
					setState(228);
					match(OpenP);
					setState(229);
					fun_sym();
					setState(230);
					match(Comma);
					setState(231);
					arity();
					setState(232);
					match(CloseP);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(248);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(236);
					match(Comma);
					setState(244);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case Identifier:
						{
						setState(237);
						fun_sym();
						}
						break;
					case OpenP:
						{
						setState(238);
						match(OpenP);
						setState(239);
						fun_sym();
						setState(240);
						match(Comma);
						setState(241);
						arity();
						setState(242);
						match(CloseP);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(250);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(251);
				match(CloseB);
				setState(252);
				match(Dot);
				}
			}

			setState(285);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Predicates) {
				{
				setState(256);
				match(Predicates);
				setState(257);
				match(OpenB);
				setState(265);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(258);
					pred_sym();
					}
					break;
				case OpenP:
					{
					setState(259);
					match(OpenP);
					setState(260);
					pred_sym();
					setState(261);
					match(Comma);
					setState(262);
					arity();
					setState(263);
					match(CloseP);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(279);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(267);
					match(Comma);
					setState(275);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case Identifier:
						{
						setState(268);
						pred_sym();
						}
						break;
					case OpenP:
						{
						setState(269);
						match(OpenP);
						setState(270);
						pred_sym();
						setState(271);
						match(Comma);
						setState(272);
						arity();
						setState(273);
						match(CloseP);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(281);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(282);
				match(CloseB);
				setState(283);
				match(Dot);
				}
			}
